--- a/Tema1/1.Float-Clear/ej-11.html
+++ b/Tema1/1.Float-Clear/ej-11.html
@@ -17,11 +17,12 @@
     }
 
     .logo {
-      float: right;
+      float: left;
     }
 
     .navigation {
-      float: left;
+      float: right;
+      width: 70%;
     }
 
     .sidebar {
@@ -31,12 +32,12 @@
     }
 
     .sub-content {
-      height: 140px;
+      height: 60px;
       margin-bottom: 20px;
     }
 
     .sub-content-2 {
-      height: 140px;
+      height: 60px;
     }
 
     .sub-content-wrapper {
